# Olio-ohjelmointi-ja-oliopohjanainen-suunnittelu-2026

ItalianCheff/: CMakeLists.txt  ItalianCheff.h  chef.h
laskin/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikkotehtava6/: CMakeLists.txt  main.cpp  student.cpp  student.h
